--- a/R/main.ipynb
+++ b/R/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 133,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 134,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 135,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 136,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 137,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 138,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 139,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 140,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 141,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 142,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 143,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 144,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 145,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 146,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 147,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 148,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 149,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 150,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 151,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 152,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 153,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1260,14 +1260,15 @@
     "    filter( PurchaseValue > 0, Country == \"United Kingdom\") %>% \n",
     "    group_by(StockCode, Description,Country) %>% \n",
     "    summarise(PurchaseValue = sum(PurchaseValue), Quantity = sum(Quantity)) %>% \n",
-    "    arrange(desc(PurchaseValue))  \n",
+    "    arrange(desc(PurchaseValue))  %>% \n",
+    "    head(10)\n",
     "\n",
-    "insight3.1 %>% head(10)"
+    "insight3.1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1285,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 155,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1299,6 +1300,93 @@
       "\u001b[1m\u001b[22m`summarise()` has grouped output by 'StockCode', 'Description'. You can\n",
       "override using the `.groups` argument.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 10 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>StockCode</th><th scope=col>Description</th><th scope=col>Country</th><th scope=col>PurchaseValue</th><th scope=col>Quantity</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>PADS  </td><td>PADS TO MATCH ALL CUSHIONS         </td><td>United Kingdom</td><td>0.003</td><td>3</td></tr>\n",
+       "\t<tr><td>84227 </td><td>HEN HOUSE W CHICK IN NEST          </td><td>United Kingdom</td><td>0.420</td><td>1</td></tr>\n",
+       "\t<tr><td>51014c</td><td>FEATHER PEN,COAL BLACK             </td><td>United Kingdom</td><td>0.830</td><td>1</td></tr>\n",
+       "\t<tr><td>21268 </td><td>VINTAGE BLUE TINSEL REEL           </td><td>United Kingdom</td><td>0.840</td><td>2</td></tr>\n",
+       "\t<tr><td>90084 </td><td>PINK CRYSTAL GUITAR PHONE CHARM    </td><td>United Kingdom</td><td>0.850</td><td>1</td></tr>\n",
+       "\t<tr><td>84201C</td><td>HAPPY BIRTHDAY CARD TEDDY/CAKE     </td><td>United Kingdom</td><td>0.950</td><td>5</td></tr>\n",
+       "\t<tr><td>84206B</td><td>CAT WITH SUNGLASSES BLANK CARD     </td><td>United Kingdom</td><td>0.950</td><td>5</td></tr>\n",
+       "\t<tr><td>84990 </td><td>60 GOLD AND SILVER FAIRY CAKE CASES</td><td>United Kingdom</td><td>1.100</td><td>2</td></tr>\n",
+       "\t<tr><td>21009 </td><td>ETCHED GLASS STAR TREE DECORATION  </td><td>United Kingdom</td><td>1.250</td><td>1</td></tr>\n",
+       "\t<tr><td>35597A</td><td>DUSTY PINK CHRISTMAS TREE 30CM     </td><td>United Kingdom</td><td>1.250</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 10 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " StockCode & Description & Country & PurchaseValue & Quantity\\\\\n",
+       " <chr> & <chr> & <chr> & <dbl> & <int>\\\\\n",
+       "\\hline\n",
+       "\t PADS   & PADS TO MATCH ALL CUSHIONS          & United Kingdom & 0.003 & 3\\\\\n",
+       "\t 84227  & HEN HOUSE W CHICK IN NEST           & United Kingdom & 0.420 & 1\\\\\n",
+       "\t 51014c & FEATHER PEN,COAL BLACK              & United Kingdom & 0.830 & 1\\\\\n",
+       "\t 21268  & VINTAGE BLUE TINSEL REEL            & United Kingdom & 0.840 & 2\\\\\n",
+       "\t 90084  & PINK CRYSTAL GUITAR PHONE CHARM     & United Kingdom & 0.850 & 1\\\\\n",
+       "\t 84201C & HAPPY BIRTHDAY CARD TEDDY/CAKE      & United Kingdom & 0.950 & 5\\\\\n",
+       "\t 84206B & CAT WITH SUNGLASSES BLANK CARD      & United Kingdom & 0.950 & 5\\\\\n",
+       "\t 84990  & 60 GOLD AND SILVER FAIRY CAKE CASES & United Kingdom & 1.100 & 2\\\\\n",
+       "\t 21009  & ETCHED GLASS STAR TREE DECORATION   & United Kingdom & 1.250 & 1\\\\\n",
+       "\t 35597A & DUSTY PINK CHRISTMAS TREE 30CM      & United Kingdom & 1.250 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 10 × 5\n",
+       "\n",
+       "| StockCode &lt;chr&gt; | Description &lt;chr&gt; | Country &lt;chr&gt; | PurchaseValue &lt;dbl&gt; | Quantity &lt;int&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| PADS   | PADS TO MATCH ALL CUSHIONS          | United Kingdom | 0.003 | 3 |\n",
+       "| 84227  | HEN HOUSE W CHICK IN NEST           | United Kingdom | 0.420 | 1 |\n",
+       "| 51014c | FEATHER PEN,COAL BLACK              | United Kingdom | 0.830 | 1 |\n",
+       "| 21268  | VINTAGE BLUE TINSEL REEL            | United Kingdom | 0.840 | 2 |\n",
+       "| 90084  | PINK CRYSTAL GUITAR PHONE CHARM     | United Kingdom | 0.850 | 1 |\n",
+       "| 84201C | HAPPY BIRTHDAY CARD TEDDY/CAKE      | United Kingdom | 0.950 | 5 |\n",
+       "| 84206B | CAT WITH SUNGLASSES BLANK CARD      | United Kingdom | 0.950 | 5 |\n",
+       "| 84990  | 60 GOLD AND SILVER FAIRY CAKE CASES | United Kingdom | 1.100 | 2 |\n",
+       "| 21009  | ETCHED GLASS STAR TREE DECORATION   | United Kingdom | 1.250 | 1 |\n",
+       "| 35597A | DUSTY PINK CHRISTMAS TREE 30CM      | United Kingdom | 1.250 | 1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   StockCode Description                         Country        PurchaseValue\n",
+       "1  PADS      PADS TO MATCH ALL CUSHIONS          United Kingdom 0.003        \n",
+       "2  84227     HEN HOUSE W CHICK IN NEST           United Kingdom 0.420        \n",
+       "3  51014c    FEATHER PEN,COAL BLACK              United Kingdom 0.830        \n",
+       "4  21268     VINTAGE BLUE TINSEL REEL            United Kingdom 0.840        \n",
+       "5  90084     PINK CRYSTAL GUITAR PHONE CHARM     United Kingdom 0.850        \n",
+       "6  84201C    HAPPY BIRTHDAY CARD TEDDY/CAKE      United Kingdom 0.950        \n",
+       "7  84206B    CAT WITH SUNGLASSES BLANK CARD      United Kingdom 0.950        \n",
+       "8  84990     60 GOLD AND SILVER FAIRY CAKE CASES United Kingdom 1.100        \n",
+       "9  21009     ETCHED GLASS STAR TREE DECORATION   United Kingdom 1.250        \n",
+       "10 35597A    DUSTY PINK CHRISTMAS TREE 30CM      United Kingdom 1.250        \n",
+       "   Quantity\n",
+       "1  3       \n",
+       "2  1       \n",
+       "3  1       \n",
+       "4  2       \n",
+       "5  1       \n",
+       "6  5       \n",
+       "7  5       \n",
+       "8  2       \n",
+       "9  1       \n",
+       "10 1       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1309,13 +1397,14 @@
     "    filter( PurchaseValue > 0, Country == \"United Kingdom\") %>% \n",
     "    group_by(StockCode, Description,Country) %>% \n",
     "    summarise(PurchaseValue = sum(PurchaseValue), Quantity = sum(Quantity)) %>% \n",
-    "    arrange(PurchaseValue) \n",
-    "insight3.2 %>% head(10)"
+    "    arrange(PurchaseValue) %>% \n",
+    "    head(10)\n",
+    "insight3.2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1334,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 157,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1444,28 +1533,14 @@
     "    filter( PurchaseValue > 0, Country == \"United Kingdom\") %>% \n",
     "    group_by(StockCode, Description,Country) %>% \n",
     "    summarise(PurchaseValue = sum(PurchaseValue), Quantity = sum(Quantity)) %>% \n",
-    "    arrange(Quantity) \n",
-    "insight3.3 %>% head(10)"
+    "    arrange(Quantity)  %>% \n",
+    "    head(10)\n",
+    "insight3.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 158,
    "metadata": {
     "vscode": {
      "languageId": "r"
