--- a/R/main.ipynb
+++ b/R/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 212,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -12,13 +12,13 @@
    "source": [
     "#install.packages(\"tidyverse\")\n",
     "#install.packages(\"anytime\")\n",
-    "#install.packages(\"gganimate\")\n",
-    "#install.packages(\"maps\")"
+    "#install.packages(\"maps\")\n",
+    "#install.packages(\"scales\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 213,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -29,14 +29,13 @@
     "library(tidyverse) \n",
     "library(lubridate)\n",
     "library(anytime)\n",
-    "library(gganimate)\n",
     "library(maps)\n",
     "library(scales)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 214,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 215,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 216,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 217,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 218,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -243,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 219,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 220,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -335,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 221,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -434,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 222,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -465,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 223,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -495,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 224,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -586,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 225,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -619,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 226,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -734,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 227,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -753,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 228,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -795,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 229,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -917,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 230,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1128,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 231,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1145,13 +1144,13 @@
     "  scale_fill_gradient(low = \"#ffffff\", high = \"#FA3C8A\",trans = \"log\") +\n",
     "  coord_fixed(1.3) +\n",
     "  expand_limits(x = world_map$long, y = world_map$lat)+\n",
-    "  theme(  plot.title = element_text(hjust = 0.5, size = 24),axis.ticks.x = element_blank(),axis.text.x = element_blank(), axis.ticks.y = element_blank(),axis.text.y = element_blank())+\n",
+    "  theme(plot.title = element_text(hjust = 0.5, size = 24),axis.ticks.x = element_blank(),axis.text.x = element_blank(), axis.ticks.y = element_blank(),axis.text.y = element_blank())+\n",
     "  labs(title=\"Insight 3: HeatMap dos países com maior volume de vendas\",) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 232,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1258,7 +1257,7 @@
     "# Insight 3.1: Relação de produtos mais vendidos dentro do país com maior volume de vendas (Reino Unido).\n",
     "insight3.1 <- df %>% select(StockCode, Description,PurchaseValue, Country,Quantity)  %>% \n",
     "    filter( PurchaseValue > 0, Country == \"United Kingdom\") %>% \n",
-    "    group_by(StockCode, Description,Country) %>% \n",
+    "    group_by(StockCode, Description, Country) %>% \n",
     "    summarise(PurchaseValue = sum(PurchaseValue), Quantity = sum(Quantity)) %>% \n",
     "    arrange(desc(PurchaseValue))  %>% \n",
     "    head(10)\n",
@@ -1267,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 233,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1285,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 234,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1403,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 240,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1413,7 +1412,6 @@
    "source": [
     "plotInsight3.2 <- ggplot(data = insight3.2, aes(x = reorder(Description, PurchaseValue), y = PurchaseValue, fill = Description))+\n",
     "    geom_bar(stat='identity')+\n",
-    "    #theme(axis.text.y = element_text(size = 20, hjust = 1), axis.text.x = element_text(angle = 80, size = 20, hjust = 1)) +\n",
     "    theme( plot.title = element_text(hjust = 0.5, size = 24),axis.text.y = element_text(size = 20, hjust = 1), , axis.text.x = element_text(angle = 80, size = 20, hjust = 1),panel.background = element_rect(fill = 'grey'),) +\n",
     "    scale_fill_manual(values = pinkColors)+\n",
     "    labs(title=\"Insight 3.2: Os 10 Items com menor valor de compra no Reino Unido \",x =\"Description\", y = \"PurchaseValue\",fill=\"none\") +\n",
@@ -1422,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 236,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1539,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 241,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1623,96 +1621,64 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "text/html": [
+       "<strong>png:</strong> 2"
+      ],
+      "text/latex": [
+       "\\textbf{png:} 2"
+      ],
+      "text/markdown": [
+       "**png:** 2"
+      ],
+      "text/plain": [
+       "png \n",
+       "  2 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<strong>png:</strong> 2"
+      ],
+      "text/latex": [
+       "\\textbf{png:} 2"
+      ],
+      "text/markdown": [
+       "**png:** 2"
+      ],
+      "text/plain": [
+       "png \n",
+       "  2 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR while rich displaying an object: \u001b[1m\u001b[33mError\u001b[39m in \u001b[1m\u001b[1m`f()`:\u001b[22m\n",
-      "\u001b[33m!\u001b[39m Insufficient values in manual scale. 3999 needed but only 10 provided.\n",
-      "\n",
-      "Traceback:\n",
-      "1. tryCatch(withCallingHandlers({\n",
-      " .     if (!mime %in% names(repr::mime2repr)) \n",
-      " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
-      " .     rpr <- repr::mime2repr[[mime]](obj)\n",
-      " .     if (is.null(rpr)) \n",
-      " .         return(NULL)\n",
-      " .     prepare_content(is.raw(rpr), rpr)\n",
-      " . }, error = error_handler), error = outer_handler)\n",
-      "2. tryCatchList(expr, classes, parentenv, handlers)\n",
-      "3. tryCatchOne(expr, names, parentenv, handlers[[1L]])\n",
-      "4. doTryCatch(return(expr), name, parentenv, handler)\n",
-      "5. withCallingHandlers({\n",
-      " .     if (!mime %in% names(repr::mime2repr)) \n",
-      " .         stop(\"No repr_* for mimetype \", mime, \" in repr::mime2repr\")\n",
-      " .     rpr <- repr::mime2repr[[mime]](obj)\n",
-      " .     if (is.null(rpr)) \n",
-      " .         return(NULL)\n",
-      " .     prepare_content(is.raw(rpr), rpr)\n",
-      " . }, error = error_handler)\n",
-      "6. repr::mime2repr[[mime]](obj)\n",
-      "7. repr_text.default(obj)\n",
-      "8. paste(capture.output(print(obj)), collapse = \"\\n\")\n",
-      "9. capture.output(print(obj))\n",
-      "10. withVisible(...elt(i))\n",
-      "11. print(obj)\n",
-      "12. print.ggplot(obj)\n",
-      "13. ggplot_build(x)\n",
-      "14. ggplot_build.ggplot(x)\n",
-      "15. lapply(data, scales_map_df, scales = npscales)\n",
-      "16. FUN(X[[i]], ...)\n",
-      "17. unlist(lapply(scales$scales, function(scale) scale$map_df(df = df)), \n",
-      "  .     recursive = FALSE)\n",
-      "18. lapply(scales$scales, function(scale) scale$map_df(df = df))\n",
-      "19. FUN(X[[i]], ...)\n",
-      "20. scale$map_df(df = df)\n",
-      "21. f(..., self = self)\n",
-      "22. lapply(aesthetics, function(j) self$map(df[[j]]))\n",
-      "23. FUN(X[[i]], ...)\n",
-      "24. self$map(df[[j]])\n",
-      "25. f(..., self = self)\n",
-      "26. self$palette(n)\n",
-      "27. f(...)\n",
-      "28. abort(glue(\"Insufficient values in manual scale. {n} needed but only {length(values)} provided.\"))\n",
-      "29. signal_abort(cnd, .file)\n"
+      "Warning message in file(file, ifelse(append, \"a\", \"w\")):\n",
+      "\"não foi possível abrir o arquivo '../teste_dados_ecommerce_tratado.csv': Invalid argument\"\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<strong>png:</strong> 2"
-      ],
-      "text/latex": [
-       "\\textbf{png:} 2"
-      ],
-      "text/markdown": [
-       "**png:** 2"
-      ],
-      "text/plain": [
-       "png \n",
-       "  2 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<strong>png:</strong> 2"
-      ],
-      "text/latex": [
-       "\\textbf{png:} 2"
-      ],
-      "text/markdown": [
-       "**png:** 2"
-      ],
-      "text/plain": [
-       "png \n",
-       "  2 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in file(file, ifelse(append, \"a\", \"w\")): não é possível abrir a conexão\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in file(file, ifelse(append, \"a\", \"w\")): não é possível abrir a conexão\nTraceback:\n",
+      "1. write.csv(df, \"../teste_dados_ecommerce_tratado.csv\", row.names = FALSE)",
+      "2. eval.parent(Call)",
+      "3. eval(expr, p)",
+      "4. eval(expr, p)",
+      "5. utils::write.table(df, \"../teste_dados_ecommerce_tratado.csv\", \n .     row.names = FALSE, col.names = TRUE, sep = \",\", dec = \".\", \n .     qmethod = \"double\")",
+      "6. file(file, ifelse(append, \"a\", \"w\"))"
+     ]
     }
    ],
    "source": [
