Alterações no insight 3.

--- a/R/main.ipynb
+++ b/R/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -18,13 +18,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m --------------------------------------- tidyverse 1.3.1 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------ tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "\n",
+      "Attaching package: 'lubridate'\n",
+      "\n",
+      "\n",
+      "The following objects are masked from 'package:base':\n",
+      "\n",
+      "    date, intersect, setdiff, union\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'maps'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:purrr':\n",
+      "\n",
+      "    map\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'scales'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:purrr':\n",
+      "\n",
+      "    discard\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:readr':\n",
+      "\n",
+      "    col_factor\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse) \n",
     "library(lubridate)\n",
@@ -35,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -49,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -62,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -143,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -161,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -242,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -320,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -334,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -433,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -464,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -494,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -585,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -618,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -733,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -752,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -794,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -916,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1127,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1150,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1254,7 +1304,7 @@
     }
    ],
    "source": [
-    "# Insight 3.1: Relação de produtos mais vendidos dentro do país com maior volume de vendas (Reino Unido).\n",
+    "# Insight 3.1: Relação de produtos que tiveram os maiores valores de compra dentro do país com maior volume de vendas (Reino Unido).\n",
     "insight3.1 <- df %>% select(StockCode, Description,PurchaseValue, Country,Quantity)  %>% \n",
     "    filter( PurchaseValue > 0, Country == \"United Kingdom\") %>% \n",
     "    group_by(StockCode, Description, Country) %>% \n",
@@ -1266,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1278,13 +1328,13 @@
     "    geom_bar(stat='identity')+\n",
     "    theme( plot.title = element_text(hjust = 0.5, size = 24),axis.text.y = element_text(size = 20, hjust = 1), , axis.text.x = element_text(angle = 80, size = 20, hjust = 1),panel.background = element_rect(fill = 'grey'),) +\n",
     "    scale_fill_manual(values = pinkColors)+\n",
-    "    labs(title=\"Insight 3.1: Os 10 Items mais vendidos no Reino Unido \",x =\"Description\", y = \"PurchaseValue\",fill=\"none\") +\n",
+    "    labs(title=\"Insight 3.1: Os 10 Items com maiores valores de compra no Reino Unido \",x =\"Description\", y = \"PurchaseValue\",fill=\"none\") +\n",
     "    guides(fill=\"none\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1402,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1420,7 +1470,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 25,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[22m`summarise()` has grouped output by 'StockCode', 'Description'. You can\n",
+      "override using the `.groups` argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 10 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>StockCode</th><th scope=col>Description</th><th scope=col>Country</th><th scope=col>PurchaseValue</th><th scope=col>Quantity</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>23843 </td><td>PAPER CRAFT , LITTLE BIRDIE       </td><td>United Kingdom</td><td>168469.60</td><td>80995</td></tr>\n",
+       "\t<tr><td>23166 </td><td>MEDIUM CERAMIC TOP STORAGE JAR    </td><td>United Kingdom</td><td> 80575.63</td><td>77036</td></tr>\n",
+       "\t<tr><td>84077 </td><td>WORLD WAR 2 GLIDERS ASSTD DESIGNS </td><td>United Kingdom</td><td> 12309.88</td><td>49526</td></tr>\n",
+       "\t<tr><td>85099B</td><td>JUMBO BAG RED RETROSPOT           </td><td>United Kingdom</td><td> 86471.34</td><td>44264</td></tr>\n",
+       "\t<tr><td>85123A</td><td>WHITE HANGING HEART T-LIGHT HOLDER</td><td>United Kingdom</td><td> 98545.24</td><td>35448</td></tr>\n",
+       "\t<tr><td>22197 </td><td>POPCORN HOLDER                    </td><td>United Kingdom</td><td> 32709.32</td><td>34738</td></tr>\n",
+       "\t<tr><td>84879 </td><td>ASSORTED COLOUR BIRD ORNAMENT     </td><td>United Kingdom</td><td> 54756.79</td><td>33735</td></tr>\n",
+       "\t<tr><td>22616 </td><td>PACK OF 12 LONDON TISSUES         </td><td>United Kingdom</td><td>  7647.80</td><td>25127</td></tr>\n",
+       "\t<tr><td>21212 </td><td>PACK OF 72 RETROSPOT CAKE CASES   </td><td>United Kingdom</td><td> 15754.07</td><td>24986</td></tr>\n",
+       "\t<tr><td>22178 </td><td>VICTORIAN GLASS HANGING T-LIGHT   </td><td>United Kingdom</td><td> 32321.57</td><td>23692</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 10 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " StockCode & Description & Country & PurchaseValue & Quantity\\\\\n",
+       " <chr> & <chr> & <chr> & <dbl> & <int>\\\\\n",
+       "\\hline\n",
+       "\t 23843  & PAPER CRAFT , LITTLE BIRDIE        & United Kingdom & 168469.60 & 80995\\\\\n",
+       "\t 23166  & MEDIUM CERAMIC TOP STORAGE JAR     & United Kingdom &  80575.63 & 77036\\\\\n",
+       "\t 84077  & WORLD WAR 2 GLIDERS ASSTD DESIGNS  & United Kingdom &  12309.88 & 49526\\\\\n",
+       "\t 85099B & JUMBO BAG RED RETROSPOT            & United Kingdom &  86471.34 & 44264\\\\\n",
+       "\t 85123A & WHITE HANGING HEART T-LIGHT HOLDER & United Kingdom &  98545.24 & 35448\\\\\n",
+       "\t 22197  & POPCORN HOLDER                     & United Kingdom &  32709.32 & 34738\\\\\n",
+       "\t 84879  & ASSORTED COLOUR BIRD ORNAMENT      & United Kingdom &  54756.79 & 33735\\\\\n",
+       "\t 22616  & PACK OF 12 LONDON TISSUES          & United Kingdom &   7647.80 & 25127\\\\\n",
+       "\t 21212  & PACK OF 72 RETROSPOT CAKE CASES    & United Kingdom &  15754.07 & 24986\\\\\n",
+       "\t 22178  & VICTORIAN GLASS HANGING T-LIGHT    & United Kingdom &  32321.57 & 23692\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 10 × 5\n",
+       "\n",
+       "| StockCode &lt;chr&gt; | Description &lt;chr&gt; | Country &lt;chr&gt; | PurchaseValue &lt;dbl&gt; | Quantity &lt;int&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 23843  | PAPER CRAFT , LITTLE BIRDIE        | United Kingdom | 168469.60 | 80995 |\n",
+       "| 23166  | MEDIUM CERAMIC TOP STORAGE JAR     | United Kingdom |  80575.63 | 77036 |\n",
+       "| 84077  | WORLD WAR 2 GLIDERS ASSTD DESIGNS  | United Kingdom |  12309.88 | 49526 |\n",
+       "| 85099B | JUMBO BAG RED RETROSPOT            | United Kingdom |  86471.34 | 44264 |\n",
+       "| 85123A | WHITE HANGING HEART T-LIGHT HOLDER | United Kingdom |  98545.24 | 35448 |\n",
+       "| 22197  | POPCORN HOLDER                     | United Kingdom |  32709.32 | 34738 |\n",
+       "| 84879  | ASSORTED COLOUR BIRD ORNAMENT      | United Kingdom |  54756.79 | 33735 |\n",
+       "| 22616  | PACK OF 12 LONDON TISSUES          | United Kingdom |   7647.80 | 25127 |\n",
+       "| 21212  | PACK OF 72 RETROSPOT CAKE CASES    | United Kingdom |  15754.07 | 24986 |\n",
+       "| 22178  | VICTORIAN GLASS HANGING T-LIGHT    | United Kingdom |  32321.57 | 23692 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   StockCode Description                        Country        PurchaseValue\n",
+       "1  23843     PAPER CRAFT , LITTLE BIRDIE        United Kingdom 168469.60    \n",
+       "2  23166     MEDIUM CERAMIC TOP STORAGE JAR     United Kingdom  80575.63    \n",
+       "3  84077     WORLD WAR 2 GLIDERS ASSTD DESIGNS  United Kingdom  12309.88    \n",
+       "4  85099B    JUMBO BAG RED RETROSPOT            United Kingdom  86471.34    \n",
+       "5  85123A    WHITE HANGING HEART T-LIGHT HOLDER United Kingdom  98545.24    \n",
+       "6  22197     POPCORN HOLDER                     United Kingdom  32709.32    \n",
+       "7  84879     ASSORTED COLOUR BIRD ORNAMENT      United Kingdom  54756.79    \n",
+       "8  22616     PACK OF 12 LONDON TISSUES          United Kingdom   7647.80    \n",
+       "9  21212     PACK OF 72 RETROSPOT CAKE CASES    United Kingdom  15754.07    \n",
+       "10 22178     VICTORIAN GLASS HANGING T-LIGHT    United Kingdom  32321.57    \n",
+       "   Quantity\n",
+       "1  80995   \n",
+       "2  77036   \n",
+       "3  49526   \n",
+       "4  44264   \n",
+       "5  35448   \n",
+       "6  34738   \n",
+       "7  33735   \n",
+       "8  25127   \n",
+       "9  24986   \n",
+       "10 23692   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Insight 3.3: Relação dos produtos mais comprados (Quantidade) dentro do país com maior volume de vendas (Reino Unido).\n",
+    "insight3.3 <- df %>% select(StockCode, Description,PurchaseValue, Country,Quantity)  %>% \n",
+    "    filter( PurchaseValue > 0, Country == \"United Kingdom\") %>% \n",
+    "    group_by(StockCode, Description,Country) %>% \n",
+    "    summarise(PurchaseValue = sum(PurchaseValue), Quantity = sum(Quantity)) %>% \n",
+    "    arrange(desc(Quantity)) %>% \n",
+    "    head(10)\n",
+    "insight3.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1526,18 +1692,18 @@
    "source": [
     "# Insight 3.3: Relação dos produtos menos comprados (Quantidade) dentro do país com maior volume de vendas (Reino Unido).\n",
     "# OBS: Existem cerca de 86 produtos que só venderam 1 unidade.\n",
-    "insight3.3 <- df %>% select(StockCode, Description,PurchaseValue, Country,Quantity)  %>% \n",
+    "insight3.4 <- df %>% select(StockCode, Description,PurchaseValue, Country,Quantity)  %>% \n",
     "    filter( PurchaseValue > 0, Country == \"United Kingdom\") %>% \n",
     "    group_by(StockCode, Description,Country) %>% \n",
     "    summarise(PurchaseValue = sum(PurchaseValue), Quantity = sum(Quantity)) %>% \n",
     "    arrange(Quantity)  %>% \n",
     "    head(10)\n",
-    "insight3.3"
+    "insight3.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
