--- a/Python/main.ipynb
+++ b/Python/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4  12/01/10 08:26       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mateus\\AppData\\Local\\Temp\\ipykernel_15552\\3167363032.py:4: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n"
+      "C:\\Users\\Mateus\\AppData\\Local\\Temp\\ipykernel_26988\\4210267267.py:4: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n"
      ]
     },
     {
@@ -266,7 +266,7 @@
        "6       15    276156     521226.120"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
     "insight1 = df\n",
     "insight1 = insight1.loc[\n",
     "    insight1['PurchaseValue'] > 0,\n",
-    "    ['StoreId','Quantity','PurchaseValue']].groupby('StoreId', as_index=False)[\n",
+    "    ('StoreId','Quantity','PurchaseValue')].groupby('StoreId', as_index=False)[\n",
     "            'Quantity',\n",
     "            'PurchaseValue'\n",
     "        ].sum().sort_values(by=\"PurchaseValue\", ascending=False).head(10)\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,8 +306,7 @@
     "        stat='identity'\n",
     "    ) + scale_fill_manual(\n",
     "        values = pinkColors,\n",
-    "        guide=False,\n",
-    "        rect = element_rect(fill = 'grey')\n",
+    "        guide=False\n",
     "    ) + theme_minimal(\n",
     "    ) + theme( plot_title = element_text(hjust = 0.5, size = 24),\n",
     "        axis_text_y = element_text(size = 20, hjust = 1), \n",
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
